# TND004

Lab1/code/: CMakeLists.txt  lab1.cpp
Lab2/code/: CMakeLists.txt  lab2.cpp  node.h  set.cpp  set.h
